--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@uiw/react-md-editor": "^4.0.1",
+    "d3": "^7.9.0",
+    "mermaid": "^11.6.0",
     "next": "15.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
